--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,19 +5,8 @@
 html,
 body,
 #__next {
+  background: #612378;
   height: 100%;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Sukhumvit set', Prompt, ui-sans-serif, system-ui, -apple-system,
-    BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-    'Noto Color Emoji';
 }
 
 .touch-manipulation {
